// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> renders correctly renders with a language selector 1`] = `
<footer
  className="footer d-flex border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="container-fluid d-flex"
  >
    <a
      aria-label="edX Home"
      className="d-block"
      href="http://localhost:18000"
    >
      <img
        alt="Powered by Open edX"
        src="https://edx-cdn.org/v3/default/logo-trademark.svg"
        style={
          Object {
            "maxHeight": 45,
          }
        }
      />
    </a>
    <div
      className="flex-grow-1"
    />
    <form
      className="form-inline"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          className="d-inline-block m-0"
          htmlFor="site-footer-language-select"
        >
          Choose Language
        </label>
        <select
          className="form-control-sm mx-2"
          defaultValue="en"
          id="site-footer-language-select"
          name="site-footer-language-select"
        >
          <option
            value="en"
          >
            English
          </option>
          <option
            value="es"
          >
            Español
          </option>
        </select>
        <button
          className="btn btn-outline-primary btn-sm"
          type="submit"
        >
          Apply
        </button>
      </div>
    </form>
  </div>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector 1`] = `
<footer
  className="footer d-flex border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="container-fluid d-flex"
  >
    <a
      aria-label="edX Home"
      className="d-block"
      href="http://localhost:18000"
    >
      <img
        alt="Powered by Open edX"
        src="https://edx-cdn.org/v3/default/logo-trademark.svg"
        style={
          Object {
            "maxHeight": 45,
          }
        }
      />
    </a>
    <div
      className="flex-grow-1"
    />
  </div>
</footer>
`;

exports[`<Footer /> renders correctly renders without a language selector in es 1`] = `
<footer
  className="footer d-flex border-top py-3 px-4"
  role="contentinfo"
>
  <div
    className="container-fluid d-flex"
  >
    <a
      aria-label="edX Home"
      className="d-block"
      href="http://localhost:18000"
    >
      <img
        alt="Powered by Open edX"
        src="https://edx-cdn.org/v3/default/logo-trademark.svg"
        style={
          Object {
            "maxHeight": 45,
          }
        }
      />
    </a>
    <div
      className="flex-grow-1"
    />
  </div>
</footer>
`;
